feat(ignews): chapt. III-01-01-09 - finishes app initial structure

--- a/nextjs/ignews/src/styles/home.module.scss
+++ b/nextjs/ignews/src/styles/home.module.scss
@@ -1,3 +1,5 @@
+// All .module files will be applied to the page only if the page imports the corresponding component.
+
 .title {
   font-family: Roboto;
 }
