--- a/nextjs/ignews/src/styles/global.scss
+++ b/nextjs/ignews/src/styles/global.scss
@@ -8,8 +8,10 @@
   --white: #fff;
   --gray-100: #f8f8f8;
   --gray-300: #e2e2e2;
+  --gray-800: #494d4b;
   --gray-900: #29292e;
   --cyan-500: #61dafb;
+  --cyan-900: #1f2729;
   --yellow-500: #eba417;
 
   --background: #f2f3f5;
@@ -40,7 +42,7 @@
 
 body {
   background: var(--gray-900);
-  color: #29292e;
+  color: var(--white);
 }
 
 body,
