feat(ignews): adds prismic CMS implementation for posts

--- a/nextjs/ignews/src/styles/global.scss
+++ b/nextjs/ignews/src/styles/global.scss
@@ -8,6 +8,8 @@
   --white: #fff;
   --gray-100: #f8f8f8;
   --gray-300: #e2e2e2;
+  --gray-500: #a8a8b3;
+  --gray-700: #737380;
   --gray-800: #494d4b;
   --gray-900: #29292e;
   --cyan-500: #61dafb;
